# professor-assistance

./: .env  .env.example  .gitignore  README.md  pyproject.toml
.cursor/commands/: review-paper.md
.cursor/skills/review-paper/: SKILL.md
.github/workflows/: ci.yml
config/: style_card.md
data/corpus/: README.md  professor_paper.docx
data/drafts/: README.md  sample_draft.docx
data/examples/: README.md
docs/: roadmap.md
evals/: README.md  build_fixtures.py  cases.json  run_eval.py
example_paperworks/: README.md
example_paperworks/professor_paper/: professor_paper.docx
example_paperworks/student_paper/: student_draft.docx
output/sample_draft/: reviewed.docx  suggestions.md
prompts/: reviewer_system.md  section_rules.md  style_extraction.md
scripts/: make_sample_draft.py  make_sample_examples.py  make_sample_paper.py
src/professor_assistant/: __init__.py  api.py  cli.py  config.py  docx_io.py  examples.py  ingest.py  llm.py  readers.py  retrieve.py  review.py  review_cache.py  store.py  style.py
src/professor_assistant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_examples.py  test_smoke.py
web/: index.html
